--- a/index.html
+++ b/index.html
@@ -34,6 +34,20 @@
   <button id="btn">compute</button>
 
   <p id="result"></p>
+  <p>
+    Insert the information in the form and the calculator will determine the boiling point elevation<br> 
+    What is the boiling point elevation?<br>
+    The boiling point elevation is the increase in the boiling point of a solvent when the solute is added to the solution. The boiling point elevation is a colligative property of the matter. The elevation in the boiling point of a solution depends on the amount of solute added to it. High concentration of solute in the solution indicates a high boiling point elevation.<br>
+    How to calculate boiling point elevation?<br>
+    To calculate boiling point elevation you should use the following formula:<br>
+    ΔTb = i * kb * m<br>
+    where:<br>
+    i = van't hoff factor<br>
+    kb = the ebullioscopic constant<br>
+    m = molalityh of the solute<br>
+    Why use boiling point elevation?<br>
+    The boiling point elevation is used to protect agains boilovers.<br>
+</p>
   <script src="app.js"></script>
 </body>
 </html>
